# veb-in-c

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  THEORY.md  build.sh  gen-docs.sh
.github/workflows/: cicd.yaml
include/: vebtrees.h
src/: vebtrees.c
test/: CMakeLists.txt  sorting_benchmark.c  unit_tests.c
